[package]
name = "bittenhumans"
description = "Simple byte size humanization library for stringbar"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sysrqmagician/bittenhumans"
authors = ["sysrqmagician"]
readme = "README.md"
categories = ["encoding"]

[dependencies]
enum-iterator = "2.1.0"
